--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -165,8 +165,8 @@
       <li>
         <a
           href="https://github.com/{{ author.github }}"
+          rel="nofollow noopener noreferrer me"
           target="_blank"
-          rel="noopener noreferrer"
         >
           <i class="fab fa-fw fa-github" aria-hidden="true"></i
           ><span class="label">GitHub</span>
