--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,12 @@
     {% include head.html %}
     {% include head/custom.html %}
   </head>
-
+  
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
+    
+    <div style="position: absolute; width: 100%; height: 100%;" id="particles-js"></div>
     {% include_cached skip-links.html %}
     {% include_cached masthead.html %}
-
     <div class="initial-content">
       {{ content }}
     </div>
@@ -36,6 +37,5 @@
     </div>
 
     {% include scripts.html %}
-
   </body>
 </html>
